syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
	rpc GetDiscount(ProductNameRequest) returns (CouponModel);
	rpc CreateDiscount(CouponModelRequest) returns (CouponModel);
	rpc UpdateDiscount(CouponModelRequest) returns (CouponModel);
	rpc DeleteDiscount(ProductNameRequest) returns (DeleteDiscountResponse);
}

message ProductNameRequest {
	string productName = 1;
}

message CouponModelRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}

message CouponModel {
	int32 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}